--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@
   margin: 0;
   padding: 0;
 }
+
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   background: linear-gradient(to right, #8003bb, #bf7dc6);
 }
