--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 html {
@@ -10,7 +11,7 @@ html {
 }
 
 body {
-  background: linear-gradient(to right, #8003bb, #bf7dc6);
+  background-color: #fff;
 }
 
 img {
@@ -29,7 +30,18 @@ header {
 }
 
 .container {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.container1 {
   height: 100vh;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 .logo {
@@ -37,6 +49,7 @@ header {
   align-items: center;
   margin-left: 26px;
   cursor: pointer;
+  height: 100%;
 }
 
 .navbar {
@@ -45,6 +58,7 @@ header {
   align-items: center;
   gap: 40px;
   margin-right: 80px;
+  height: 100%;
 }
 
 .navbar a {
@@ -59,39 +73,43 @@ header {
   font-weight: 600;
 }
 
-.text-container {
-  margin-left: 260px;
-  margin-top: 150px;
+.banner-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  background: linear-gradient(to right, #8003bb, #bf7dc6);
+  width: 100%;
+  padding-top: 80px;
 }
 
-.text-container p {
+.banner-content p {
   font-family: "Nunito", sans-serif;
   font-weight: 800;
-  font-size: 64px;
+  font-size: 68px;
   color: #fff;
-  width: 918px;
-  margin-top: 10px;
+  max-width: 918px;
 }
 
-.button-container {
-  margin: 40px 0 0 260px;
+.banner-button {
   display: flex;
-  gap: 20px;
+  gap: 25px;
+  margin-top: 50px;
 }
 
 .button {
   background-color: #ffd730;
-  border-radius: 40px;
-  border: none;
-  width: 180px;
-  padding: 15px 0;
   text-align: center;
   text-decoration: none;
   font-family: "Nunito", sans-serif;
   color: black;
   font-weight: 800;
-  font-size: 16px;
-  cursor: pointer;
+  font-size: 18px;
+  padding: 20px;
+  border-radius: 40px;
+  box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.15);
+  border: none;
 }
 
 .button:hover {
@@ -99,8 +117,32 @@ header {
 }
 
 .content-container {
-  display: grid;
-  grid-template-columns: 50% 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  margin-top: 80px;
+}
+.content-container2 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  margin-top: 80px;
+}
+
+.imagem {
+  width: fit-content;
+}
+
+.img-container {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+.text-container {
+  width: 100%;
 }
 
 .text-right {
@@ -109,14 +151,7 @@ header {
   font-size: 26px;
   color: black;
   text-align: right;
-  margin-top: 150px;
-  margin-right: 80px;
-}
-
-.imagem {
-  width: 500px;
-  margin-top: 80px;
-  margin-left: 100px;
+  max-width: 600px;
 }
 
 .text-left {
@@ -124,15 +159,17 @@ header {
   font-weight: 800;
   font-size: 26px;
   color: black;
-  margin-top: 80px;
-  margin-left: 80px;
   text-align: left;
+  max-width: 700px;
+  margin-left: 80px;
 }
 
-.second-button {
+.text-button {
   display: flex;
   align-items: center;
   justify-content: center;
+  width: 100%;
+  margin-right: 80px;
 }
 
 .roxo {
@@ -142,35 +179,21 @@ header {
 .amarelo {
   color: #ffd730;
 }
-
-.second {
-  background-color: #fff;
-}
-
-.third {
-  background-color: #fff;
+.titulo {
+  padding-top: 50px;
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
-  height: 100vh;
-}
-
-.titulo {
-  grid-area: titulo;
-  display: flex;
   width: 100%;
-  grid-area: "titulo";
-  justify-content: center;
-  margin-bottom: 50px;
 }
 
 .titulo h3 {
+  display: flex;
+  justify-items: center;
   color: #8003bb;
   font-family: "Nunito", sans-serif;
   font-weight: 800;
   font-size: 56px;
-  margin-top: 80px;
 }
 
 .galeria {
@@ -245,10 +268,10 @@ header {
   display: flex;
   flex-direction: column;
   background: linear-gradient(to right, #8003bb, #bf7dc6);
-  width: 1000px;
+  width: 80%;
   padding: 20px;
   border-radius: 10px;
-  margin: 50px 50px;
+  margin-bottom: 50px;
 }
 
 .formulario-area {
@@ -272,6 +295,7 @@ header {
 .input-area {
   display: flex;
   flex-direction: column;
+  width: 100%;
 }
 
 .input-area input {
@@ -285,7 +309,7 @@ header {
 
 .input-area label {
   font-family: "Nunito", sans-serif;
-  margin:  10px 0 0 10px;
+  margin: 10px 0 0 10px;
   color: #fff;
   font-weight: 700;
 }
@@ -298,7 +322,7 @@ header {
   box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.15);
 }
 
-h3 {
+form h3 {
   font-family: "Nunito", sans-serif;
   font-size: 36px;
   margin-bottom: 20px;
@@ -314,22 +338,138 @@ h3 {
 hr {
   border: 0;
   height: 1px;
-  background: #8003bb; /* Cor da linha */
-  background-image: linear-gradient(to right, #fff, #8003bb , #fff); /* Gradiente */
+  background: #8003bb;
+  background-image: linear-gradient(to right, #fff, #8003bb, #fff);
 }
 
-footer{
+footer {
   background-color: #390452;
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
-.copyright p{
+.copyright p {
   color: #fff;
   font-family: "Nunito", sans-serif;
   font-size: 14px;
   margin-right: 50px;
 }
 
+@media screen and (max-width: 420px) {
+  .navbar {
+    display: none;
+  }
 
+  .container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  /*Banner*/
+ 
+
+  .banner-content p {
+    font-size: 40px;
+    padding: 0px 20px;
+  }
+  .banner-button {
+    justify-content: left;
+    align-items: center;
+    margin-left: 20px;
+    gap: 10px;
+  }
+
+  /* Saiba mais */
+
+  .content-container {
+    flex-direction: column-reverse;
+    margin-top: 20px;
+  }
+  .content-container2 {
+    flex-direction: column;
+    margin-top: 20px;
+  }
+
+  .text-right {
+    text-align: left;
+    padding: 20px;
+  }
+
+  .text-left {
+    margin-left: 0;
+    padding: 20px;
+    margin-bottom: 20px;
+  }
+
+  .text-button {
+    margin: 0;
+  }
+
+  .button2 {
+    margin: 0;
+  }
+
+  .imagem {
+    width: 80%;
+  }
+
+  /* Nosso Projetos */
+
+  .titulo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .titulo h3 {
+    color: #8003bb;
+    font-family: "Nunito", sans-serif;
+    font-weight: 800;
+    font-size: 36px;
+  }
+
+  /* formulario */
+
+  .formulario-container {
+    margin-top: 50px;
+  }
+
+  .imagem-formulario {
+    display: none;
+  }
+
+  .form-titulo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  form h3 {
+    font-size: 18px;
+    margin: 0;
+  }
+
+  .formulario-area {
+    display: flex;
+    width: 100%;
+  }
+
+  .form-titulo {
+    width: 100%;
+  }
+
+  .button-form button {
+    font-size: 16px;
+    padding: 10px;
+    width: 100%;
+  }
+
+  .formulario-area form {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+}
