--- a/style.css
+++ b/style.css
@@ -21,12 +21,90 @@ img {
 header {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   background: linear-gradient(to right, #8003bb, #bf7dc6);
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 80px;
+}
+
+ul {
+  list-style: none;
+}
+
+.hamburguer {
+  background-color: #390452;
+  opacity: 0.97;
+  height: 100vh;
+  width: 0%;
+  position: fixed;
+  top: 0;
+  right: 0;
+  z-index: 9999;
+  overflow: hidden;
+  transition: .5s;
+}
+
+.hamburguer.abrir-menu {
+  width: 70%;
+}
+
+.hamburguer.abrir-menu ~.overlay-menu{
+  display: block;
+}
+
+.hamburguer nav ul {
+  text-align: right;
+}
+
+.hamburguer ul li a {
+  display: block;
+  flex-direction: column;
+  text-align: right;
+  list-style: none;
+  text-decoration: none;
+  font-size: 20px;
+  color: #fff;
+  font-family: "Nunito", sans-serif;
+  font-weight: 600;
+  padding: 20px 8%;
+}
+.hamburguer ul li a:hover {
+  background-color: #ffd730;
+  color: black;
+}
+
+.hamburguer .btn-fechar {
+  padding: 20px;
+}
+
+.hamburguer .btn-fechar i {
+  color: #fff;
+  font-size: 20px;
+}
+
+.btn-abrir-menu{
+  display: none;
+}
+
+.btn-abrir-menu i {
+  font-size: 40px;
+  color: #fff;
+  margin-right: 20px;
+  cursor: pointer;
+}
+
+.overlay-menu {
+  background-color: #390452bd;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 8888;
+  display: none;
 }
 
 .container {
@@ -81,7 +159,7 @@ header {
   height: 100%;
   background: linear-gradient(to right, #8003bb, #bf7dc6);
   width: 100%;
-  padding-top: 80px;
+  padding: 80px 0px;
 }
 
 .banner-content p {
@@ -368,8 +446,11 @@ footer {
     align-items: center;
   }
 
+  .btn-abrir-menu{
+    display: block;
+  }
+
   /*Banner*/
- 
 
   .banner-content p {
     font-size: 40px;
